# server/middlewares/jwt/jwt.go
@@ -5,13 +5,16 @@ import (
 	"strings"
 	"time"
 
-	"github.com/Biubiubiuuuu/warehouse/server/common/response"
 	tcode "github.com/Biubiubiuuuu/warehouse/server/common/tips/code"
 	"github.com/Biubiubiuuuu/warehouse/server/common/tips/msg"
+	"github.com/Biubiubiuuuu/warehouse/server/entity"
 	"github.com/Biubiubiuuuu/warehouse/server/helpers/jwtHelper"
 	"github.com/gin-gonic/gin"
 )
 
+// JWT middleware validation
+// param query url "token"
+// param header "Authorization"
 // JWT middleware validation
 // param query url "token"
 // param header "Authorization"
@@ -23,31 +26,28 @@ func JWT() gin.HandlerFunc {
 			authToken := c.GetHeader("Authorization")
 			if authToken == "" {
 				code = tcode.AUTH_NOT_BEARER
-				return
 			}
-			authToken = strings.TrimSpace(authToken)
-			claims, err := jwtHelper.ParseToken(authToken)
+			token = strings.TrimSpace(authToken)
+			claims, err := jwtHelper.ParseToken(token)
 			if err != nil {
 				code = tcode.TOKEN_AUTH_ERROR
-				return
-			}
-			if time.Now().Unix() > claims.ExpiresAt {
+			} else if time.Now().Unix() > claims.ExpiresAt {
 				code = tcode.TOKEN_TIMEOUT
 			}
 		} else {
 			claims, err := jwtHelper.ParseToken(token)
 			if err != nil {
 				code = tcode.TOKEN_AUTH_ERROR
-				return
-			}
-			if time.Now().Unix() > claims.ExpiresAt {
+			} else if time.Now().Unix() > claims.ExpiresAt {
 				code = tcode.TOKEN_TIMEOUT
 			}
 		}
+
 		if code != tcode.SUCCESS {
 			message := msg.GetMsg(code)
-			responseJson := response.ResponseJson(false, nil, message)
+			responseJson := entity.ResponseJson(false, nil, message)
 			c.AbortWithStatusJSON(http.StatusUnauthorized, responseJson)
+			return
 		}
 		c.Next()
 	}
